--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <ul class="list_logo">
             <li class="info_svg">
-                <img src="/assets/logo.svg">
+                <img src="./assets/logo.svg">
             </li>
             <li class="info_name">
                 <a href="#" style="text-decoration: none;color: #FFF !important;" ><h1>WILDLIFE</h1></a>
@@ -27,7 +27,7 @@
                 <a href="#" style="text-decoration: none;color: #FFF !important;" >Contact</a>
             </li>
             <li class="info_search">
-                <a href="#" style="text-decoration: none;color: #FFF !important;" ><img src="/assets/search.svg"></a>
+                <a href="#" style="text-decoration: none;color: #FFF !important;" ><img src="./assets/search.svg"></a>
             </li>
             <li class="info_sign_in">
                 <a href="#" class="sign_in_button" style="text-decoration: none;color: #FFF !important;" >Sign In</a>
