--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -117,6 +117,51 @@
             </div>
             
         </div>
+        <div class="footer">
+            <ul class="footer_list">
+                <li class="footer_elems">
+                    <div class="footer_logo">
+                        <a href="#" class="footer_logo">
+                            <img src="/assets/logo.svg">
+                        </a>
+                        <a href="#" class="footer_logo_text">
+                            WILDLIFE
+                        </a>
+                    </div>
+                </li>
+                <li class="footer_elems">
+                    <a href="#" class="text">
+                        Articles
+                    </a>
+                </li>
+                <li class="footer_elems">
+                    <a href="#" class="text">
+                        About us
+                    </a>
+                </li>
+                <li class="footer_elems">
+                    <a href="#" class="text">
+                        Learn more
+                    </a>
+                </li>
+                <li>
+                    <div class="footer_socialnetwork">
+                        <a href="#" class="footer_socialnetwork_logo">
+                            <img src="assets/pinterest.svg">
+                        </a>
+                        <a href="#" class="footer_socialnetwork_logo">
+                            <img src="assets/telegram.svg">
+                        </a>
+                        <a href="#" class="footer_socialnetwork_logo">
+                            <img src="assets/intagram.svg">
+                        </a>
+                        <a href="#" class="footer_socialnetwork_logo">
+                            <img src="assets/facebook.svg">
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>  
 </body>
 
