--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="elems">
-        <src style="background-image: url(./assets/OW_SJPoqpqc.jpg);"></src>
+        <src style="background-image: url(./assets/OW_SJPoqpqc.jpg)"></src>
         <div class="header">
             
             <ul class="list_logo">
@@ -47,7 +47,7 @@
                 </li>
                 <li class="text_surv">
                     <a class="textsurv">
-                        What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.
+                        What this means is that we exist to help protect our environment and do i numbers of ways. You can save the planet by donation.
                     </a>
                 </li>
             
