--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="elems">
-        <src style="background-image: url(./assets/OW_SJPoqpqc.jpg)"></src>
+        <src style="background-image: url(./assets/OW_SJPoqpqc.jpg);"></src>
         <div class="header">
             
             <ul class="list_logo">
